# derzn

./: .env  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  DEVELOPER_GUIDE.md  Dockerfile  Procfile  README.md  db.sqlite3  desktop.ini  docker-compose.yml  dump3.json  dump_2024-07-05_15-59-55.json  exit  manage.py  pyvenv.cfg  requirements.txt
.github/workflows/: default-ci.yaml  default-ci.yml  deploy_prod.yaml  test.yaml  test_deploy.yaml
Scripts/: activate  activate.bat  activate.fish  activate.nu
custom_admin/: apps.py  urls.py  views.py
drevo/: __init__.py  admin.py  apps.py  forms.py  managers.py  middleware.py  models.py  relations_tree.py  sender.py  services.py  signals.py  test.py  test_knowledge_proxy.py  test_mixin_meta_info.py  test_models.py  test_views.py  tests_models.py  urls.py  urls_constructor.py  views.py
dz/: asgi.py  settings.py  urls.py  wsgi.py
fixtures/: drevo_knowledgegradescale.json
help/: admin.py  apps.py  models.py  urls.py  validators.py  views.py
interview/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
profiles/: forms.py  models.py  urls.py  views.py
scripts/: remote_install.sh
scripts/ansible/: .pass  ansible.cfg  hosts  loaddump.prod.yaml  loaddump.yaml  main.yaml  prod.yaml  pyproject.toml  test.yaml
scripts/ansible/files/: passenger_wsgi.py  test.env  test.settings.py
scripts/ansible/files/prod/: envs  passenger_wsgi.py  settings.py
scripts/ansible/files/test/: envs
scripts/ansible/tasks/: main.yaml
templates/: base.html
users/: admin.py  forms.py  models.py  urls.py  views.py
(+1015 files in other folders)
