[tool.poetry]
name = "deploys"
version = "0.1.0"
description = ""
authors = ["Intey <ziexe0@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^7.0.0"
black = "^22.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
